# ProjectPractic

./: .env  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: requirements.txt
app/core/: db.py
app/migrations/: env.py
app/migrations/versions/: 5c52b8421b04_initial.py
app/models/: rezume.py  sla_settings.py  stage.py  statistic.py  user.py  vacancy.py
app/routers/auth/: auth.py  utils.py
app/routers/get_with_filters/: get_with_filters.py
app/routers/permission/: permission.py
app/routers/statistic/: statistics.py
app/schemas/response/: all_rezumes.py  token_response.py  vacancy_response.py
core/: schemas.py  settings.py
core/DataBase/models/: models.py
core/basic_auth/: auth.py  demo_jwt_auth.py  utils.py
src/core/: db.py
src/migrations/: env.py
src/migrations/versions/: 054fb9cac0e7_fix_relationships.py  269477cfd12c_remove_start_field.py  52826d7940fe_fix_stage_and_rezume_relationships.py  69511a9bf524_added_default_area_for_start_in_stage_db.py  7d2c8eeb935a_fix_relationships.py  82d5af905c0c_added_main_tables.py  a4aaf10ab524_fix_relationships.py  d264dab1a24f_remove_end_field.py  def0d177ec48_fix_relationships.py  f6a8691561a6_fix_relationships.py
src/models/: rezume.py  sla_settings.py  stage.py  statistic.py  user.py  vacancy.py  violation.py
src/routers/auth/: auth.py  utils.py
src/routers/get_with_filters/: get_with_filters.py
src/routers/permission/: permission.py
src/schemas/: create_sla_settings.py  rezume_scheme.py  token_schemas.py  user_scheme.py  vacancy.py
(+18 files in other folders)
