[tool.poetry]
name = "rezumemanager"
version = "0.1.0"
description = ""
authors = ["Andrey Kamenskiy"]
license = "MTUCI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.3"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
sqlalchemy = {extras = ["all"], version = "^2.0.36"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
